cmss/main/default/objects/InternalConsent__c/InternalConsent__c.object-meta.xml
<CustomObject>
    <label>Internal Consent</label>
    <nameField>
        <displayFormat>MS-{000000}</displayFormat>
        <label>Internal Consent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Consents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>