cmss/main/default/objects/InternalConsent__c/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operator Insert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalConsents</relationshipName>
    <type>Lookup</type>
</CustomField>