cmss/main/default/objects/InternalConsent__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>Date Insert</label>
    <type>DateTime</type>
</CustomField>