cmss/main/default/objects/InternalConsent__c/fields/InternalConsentType__c.field-meta.xml
<CustomField>
    <fullName>InternalConsentType__c</fullName>
    <label>Internal Consent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>