cmss/main/default/objects/InternalConsent__c/fields/InternalConsentValue__c.field-meta.xml
<CustomField>
    <fullName>InternalConsentValue__c</fullName>
    <label>Internal Consent Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>