cmss/main/default/objects/InternalConsent__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Internal Consents</relationshipLabel>
    <relationshipName>InternalConsents</relationshipName>
    <type>Lookup</type>
</CustomField>