cmss/main/default/objects/InternalConsent__c/fields/UpdatedBy__c.field-meta.xml
<CustomField>
    <fullName>UpdatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operator Update</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalConsentsUpdate</relationshipName>
    <type>Lookup</type>
</CustomField>