cmss/main/default/objects/InternalConsent__c/fields/UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDate__c</fullName>
    <label>Date Update</label>
    <type>DateTime</type>
</CustomField>